working way toward class project ready

--- a/src/njk/partials/footer.html
+++ b/src/njk/partials/footer.html
@@ -1,4 +1,4 @@
 <p id="legal" class="center-block text-center">
   <small>&copy; <span class="copyright-year"></span>
-  <a href="http://www.coxmediagroup.com" target="_blank">Cox Media Group</a>
+  A class project by First Last.
 </p>
