--- a/src/njk/layouts/base.html
+++ b/src/njk/layouts/base.html
@@ -1,14 +1,20 @@
 <!doctype html>
 <html lang="en">
-<!-- follow us on twitter! @aasinteractive -->
+<!-- A Intro to Coding for Journalists class project -->
 <head>
-  {% include "partials/meta.html" %}
+  <title>{% block page_title %}Default title{% endblock %}</title>
+  <meta name="description" content="{% block page_description %}Default description{% endblock %}">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link href='https://fonts.googleapis.com/css?family=Lusitania:400,700|Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/main.css">
+  {% block page_styles %}{% endblock %}
 </head>
 <body>
+  {% block above_content %}{% endblock %}
   {% block content %}{% endblock %}
-  {% include "partials/banner-ad.html" %}
   {% include "partials/footer.html" %}
-  {% include "partials/metrics.html" %}
   <script src="js/scripts.js"></script>
 </body>
 </html>
