waypoint in development.

--- a/src/njk/_layouts/base.html
+++ b/src/njk/_layouts/base.html
@@ -13,8 +13,10 @@
 </head>
 <body>
   {% block above_content %}{% endblock %}
+
   {% block content %}{% endblock %}
-  {% include "partials/footer.html" %}
+
+  {% include "_partials/footer.html" %}
   <script src="js/scripts.js"></script>
 </body>
 </html>
