--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,2 +1,17 @@
-// import bootstrap
-@import "node_modules/bootstrap/scss/bootstrap";
+// Custom variable overrides
+
+/* article */
+@import "article";
+
+/* bootstrap */
+// Option A: Include all of Bootstrap
+@import "../../node_modules/bootstrap/scss/bootstrap";
+
+// Option B: Include parts of Bootstrap
+// See https://getbootstrap.com/docs/4.1/getting-started/theming/#importing
+
+// Required
+// @import "../../node_modules/bootstrap/scss/functions";
+// @import "../../node_modules/bootstrap/scss/variables";
+// @import "../../node_modules/bootstrap/scss/mixins";
+
