--- a/src/njk/_layouts/base.njk
+++ b/src/njk/_layouts/base.njk
@@ -11,11 +11,11 @@
   {% block page_styles %}{% endblock %}
 </head>
 <body>
-  {% include "_partials/nav.html" %}
+  {% include "_partials/nav.njk" %}
 
   {% block content %}{% endblock %}
 
-  {% include "_partials/footer.html" %}
+  {% include "_partials/footer.njk" %}
 
   <script src="js/jquery.js"></script>
   <script src="js/popper.js"></script>
