clarity on project config

--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -8,10 +8,8 @@
   <div class="row">
     <div class="col">
     <h1>Main headline</h1>
-    <p class="author">By {% for author in authors %}
-      <a href="{{ author.link }}" target="_blank">{{ author.name }}</a>{% if not loop.last %}{% if loop.revindex0 == 1 %} and {% else %}, {% endif %}{% endif %} {% endfor %}
-      <br> Published {{ publish_date }}
-    </p>
+    <p class="author">By Obi-Wan Kenobi</p>
+    <p class="date"> Published May 25, 1977</p>
     </div>
   </div>
   <div class="row">
