reworking to match some changes in static apps lesson

--- a/src/njk/_partials/nav.njk
+++ b/src/njk/_partials/nav.njk
@@ -10,9 +10,9 @@
           Dropdown link
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="detail-page.html">Detail page</a>
-          <a class="dropdown-item" href="#">Non-working example</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="detail-entry-example.html">Entry example</a>
+          <a class="dropdown-item" href="detail-book-shipping-news.html">Data detail example</a>
+          <a class="dropdown-item" href="#">Extra link goes nowhere</a>
         </div>
       </li>
     </ul>
