--- a/src/njk/_layouts/detail-book.njk
+++ b/src/njk/_layouts/detail-book.njk
@@ -1,5 +1,9 @@
 {% extends '_layouts/base.njk' %}
 
+{% block page_title %}{{ book.title }}{% endblock %}
+
+{% block page_description %}{{ book.title }} by {{ book.author }}{% endblock %}
+
 {% block content %}
 <article class="container">
   <div class="row">
@@ -11,8 +15,8 @@
     </div>
     <div class="col-sm-8">
       {% block blurb %}
-        <h1>{{ book.title}}</h1>
-       <p>{{ book.blurb }}</p>
+        <h1>{{ book.title }}</h1>
+        <p>{{ book.blurb }}</p>
       {% endblock %}
     </div>
   </div>
