--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -2,7 +2,7 @@
 
 {% block page_title %}New index page title{% endblock %}
 
-{% block description %}The search description for this page goes here.{% endblock %}
+{% block page_description %}The search description for this page goes here.{% endblock %}
 
 {% block content %}
 <div class="container">
