rearranging data files

--- a/src/njk/_partials/nav.njk
+++ b/src/njk/_partials/nav.njk
@@ -10,8 +10,7 @@
           Dropdown link
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="detail-entry-example.html">Entry example</a>
-          <a class="dropdown-item" href="detail-book-shipping-news.html">Data detail example</a>
+          <a class="dropdown-item" href="detail-shipping-news.html">Data detail example</a>
           <a class="dropdown-item" href="#">Extra link goes nowhere</a>
         </div>
       </li>
