--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -9,13 +9,22 @@
   <div class="row">
     <div class="col">
       <h1>Main headline</h1>
-      <p>This is a <a href="detail-entry-example.html">link to a blog entry example</a> which shows a simple detail entry page example. It uses the "data-entry.njk" layout.</p>
-      <p>This is a <a href="detail-book-shipping-news.html">link to a book page example</a> which uses a more complex detail layout (detail-book.njk) where data is pulled into the layout and the page calls for a specific row in the data.</p>
+      <p>This is a <a href="detail-shipping-news.html">link to a book page example</a> which uses a detail layout (detail-book.njk) where data is pulled into the layout and the page calls for a specific row in the data.</p>
       <ul> 
-        {% for book in data.books %}
+        {% for book in library.books %}
           <li>{{ book.title }}, {{ book.author }}</li>
         {% endfor %}
      </ul>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+    <h2>Independent bookstores in Austin</h2>
+    {% for store in bookstores.stores %}
+    <h3><a href="{{ store.url }}" target="_blank">{{ store.name }}</a></h3>
+    <p>{{ store.address}}</p>
+    <hr>
+    {% endfor %}
     </div>
   </div>
 </div>
