--- a/src/njk/_partials/nav.njk
+++ b/src/njk/_partials/nav.njk
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="index.html">Navbar</a>
+  <a class="navbar-brand" href="/index.html">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -10,7 +10,7 @@
           Dropdown link
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="detail-shipping-news.html">Data detail example</a>
+          <a class="dropdown-item" href="/detail-shipping-news.html">Data detail example</a>
           <a class="dropdown-item" href="#">Extra link goes nowhere</a>
         </div>
       </li>
