--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <h1>Main headline hi</h1>
+        <h1>Main headline</h1>
         <p>This is a <a href="detail-shipping-news.html">link to a book page example</a> which uses a detail layout (detail-book.njk) where data is pulled into the layout and the page calls for a specific row in the data.</p>
         <ul>
           {% for book in library.books %}
