adding subdirectories to nunjucks

--- a/src/njk/_layouts/detail-book.njk
+++ b/src/njk/_layouts/detail-book.njk
@@ -11,8 +11,7 @@
     <div class="row">
       <div class="col-sm-3">
         {% block info %}
-          <img src="../img/{{ slug }}.jpg" alt="" class="img-fluid">
-          <p>{{ author }}</p>
+          <img src="../img/{{ slug }}.jpg" alt="" class="img-fluid mb-4">
         {% endblock %}
       </div>
       <div class="col-sm-9">
