--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -1,4 +1,6 @@
 {% extends '_layouts/base.njk' %}
+{% from '_macros/prose.njk' import prose %}
+{% set context = library %}
 
 {% block page_title %}Index page title{% endblock %}
 
@@ -9,7 +11,10 @@
     <div class="row">
       <div class="col">
         <h1>Main headline</h1>
-        <p>Text for the page.</p>
+
+        {{ prose(context.intro, context, data) }}
+
+        <h2>Books loop</h2>
         <ul>
           {% for book in library.books %}
             <li><a href="/books/{{book.slug}}.html">{{ book.title }}, {{ book.author }} </a></li>
