adds text loop macros. updates readme

--- a/src/njk/_layouts/base.njk
+++ b/src/njk/_layouts/base.njk
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
-    {% include "_partials/nav.njk" %}
+    {% include "_includes/nav.njk" %}
 
     {% block content %}{% endblock %}
 
-    {% include "_partials/footer.njk" %}
+    {% include "_includes/footer.njk" %}
 
     <script src="/js/jquery.js"></script>
     <script src="/js/popper.js"></script>
