--- a/src/njk/_macros/processors.njk
+++ b/src/njk/_macros/processors.njk
@@ -3,11 +3,11 @@
 {% endmacro %}
 
 {% macro text(value) %}
-<p class="copy">{{ value | safe }}</p>
+<p>{{ value | safe }}</p>
 {% endmacro %}
 
 {% macro subhead(value) %}
-<h3 class="article-subheader copy">{{ value }}</h3>
+<h3>{{ value }}</h3>
 {% endmacro %}
 
 {% macro img(value) %}
