--- a/src/njk/_includes/nav.njk
+++ b/src/njk/_includes/nav.njk
@@ -7,11 +7,11 @@
     <ul class="navbar-nav">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Library
+          Library books
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           {% for book in library.books %}
-          <a class="dropdown-item" href="{{ book.slug}}.html">{{ book.title }}</a>
+          <a class="dropdown-item" href="/books/{{ book.slug}}.html">{{ book.title }}</a>
           {% endfor %}
         </div>
       </li>
