--- a/src/njk/_includes/nav.njk
+++ b/src/njk/_includes/nav.njk
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/index.html">Navbar</a>
+  <a class="navbar-brand" href="{{ relative_path }}index.html">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -11,7 +11,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           {% for book in library.books %}
-          <a class="dropdown-item" href="/books/{{ book.slug}}.html">{{ book.title }}</a>
+          <a class="dropdown-item" href="{{ relative_path }}books/{{ book.slug}}.html">{{ book.title }}</a>
           {% endfor %}
         </div>
       </li>
