--- a/src/njk/_layouts/base.njk
+++ b/src/njk/_layouts/base.njk
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="{{ relative_path }}css/main.css">
   </head>
   <body>
     {% include "_includes/nav.njk" %}
@@ -18,9 +18,9 @@
 
     {% include "_includes/footer.njk" %}
 
-    <script src="/js/jquery.js"></script>
-    <script src="/js/popper.js"></script>
-    <script src="/js/bootstrap.js"></script>
-    <script src="/js/scripts.js"></script>
+    <script src="{{ relative_path }}js/jquery.js"></script>
+    <script src="{{ relative_path }}js/popper.js"></script>
+    <script src="{{ relative_path }}js/bootstrap.js"></script>
+    <script src="{{ relative_path }}js/scripts.js"></script>
   </body>
 </html>
