--- a/src/njk/_macros/processors.njk
+++ b/src/njk/_macros/processors.njk
@@ -7,9 +7,17 @@
 {% endmacro %}
 
 {% macro subhead(value) %}
-<h3>{{ value }}</h3>
+<h3>{{ value | safe }}</h3>
 {% endmacro %}
 
 {% macro img(value) %}
 <img src="img/{{ value.filename }}" alt="{{ value.alt }}" class="img-fluid">
+{% endmacro %}
+
+{% macro list(value) %}
+<ul>
+  {% for item in value %}
+  <li>{{ item.value | safe }}</li>
+  {% endfor %}
+</ul>
 {% endmacro %}
