--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="container">
-  <h1>Main headline</h1>
+  <h1>Main headline here</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin in facilisis velit, aliquam congue dui. Mauris id mi quam. Nam enim leo, bibendum vel efficitur id, elementum malesuada est. Pellentesque interdum tempus eros nec iaculis. Quisque ac est dictum, vehicula nulla quis, condimentum dui.</p>
   <h2>Library books loop</h2>
   <p>This loops through data that came from a Google Docs example.</p>
